--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "tedious": "^18.6.1"
   },
   "devDependencies": {
+    "nodemon": "^3.1.10",
     "plop": "^4.0.1"
   }
 }
