--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mssql": "^11.0.1",
-    "sequelize": "^6.37.7",
-    "tedious": "^18.6.1"
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
-    "plop": "^4.0.1"
+    "plop": "^4.0.1",
+    "sequelize-auto": "^0.8.8",
+    "tedious": "^18.6.1"
   }
 }
