--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "mssql": "^11.0.1",
+    "pdfkit": "^0.17.1",
     "sequelize": "^6.37.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
