--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 DB_USER=sa
 DB_PASSWORD=TuPasswordSegura123
-DB_HOST=db
+DB_HOST=localhost
 DB_NAME=PruebaTecnica
+DB_PORT=1533
 
+JWT_SECRET=PruebaTecnica
